# rtfed3d

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  Makefile-MPI.inc  Makefile-serial.inc  README.md  analysis.py  bc_symmetric.hpp  decls.hpp  hdf5util.cpp  hdf5util.hpp  integrator.hpp  mc2.cpp  mpiutil.hpp  solver.cpp  solver.hpp
base/: .gitignore  MersenneTwister.hpp  NArray.hpp  SArray.hpp  TODO  TestConfig.cpp  TestMersenneTwister.cpp  TestNArray.cpp  TestSArray.cpp  config.hpp  configparser.hpp  debug.hpp  mpiutils.cpp  mpiutils.hpp
docs/: blitz-to-mdspan-migration.md
examples/: blastwave.cfg  blastwave.cpp  circular.cfg  circular.cpp  diffusion.cpp  reconnection.cfg  reconnection.cpp  riemann1d.cpp  riemann1d_small.cfg  sheets.cpp  tearing.cfg  tearing.cpp  vortex.cfg  vortex.cpp
include/: array_types.hpp  bc.hpp  bc_conducting.hpp  bc_periodic.hpp  bc_symmetric.hpp  cmdparser.hpp  common.hpp  config.hpp  configparser.hpp  debug.hpp  decls.hpp  global.hpp  hdf5util.hpp  integrator.hpp  io.hpp  io_hdf5.hpp  limiter.hpp  mc2.hpp  mpiutil.hpp  primitive.hpp  solver.hpp
src/: bc_periodic.cpp  global.cpp  hdf5util.cpp  integrator.cpp  io_hdf5.cpp  mc2.cpp  solver.cpp
test/: Makefile  blastwave.cpp  circular.cpp  diffusion.cfg  reconnection.cpp  riemann1d.cfg  sheets.cfg  sheets.cpp
tests/: run_and_compare_hdf5.py
tests/data/: diffusion_small.cfg  diffusion_small_reference.h5  riemann1d_small_mpi4_reference.h5  riemann1d_small_reference.h5
